Implemented Role based access control using JWT